--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,21 +24,21 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Not needed if lastUpdated is not enabled
-      - uses: pnpm/action-setup@v3 # pnpm is optional but recommended, you can also use npm / yarn
+      - uses: yarn/action-setup@v3 # pnpm is optional but recommended, you can also use npm / yarn
         with:
           version: 8
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: pnpm
+          cache: yarn
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Install dependencies
-        run: pnpm install
+        run: yarn install
       - name: Build with Rspress
         run: |
-          pnpm run build
+          yarn run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
